# debug-flow

./: package-lock.json  package.json  shell.nix
.github/workflows/: build.yaml  check.yaml  postmerge.yaml  release.yaml  test.yaml
backend/app/: Cargo.toml
backend/app/src/: web.rs
backend/git2-ox/: Cargo.toml
backend/git2-ox/src/: repository.rs  status.rs
docs/introduction/: getting-started.md
frontend/src/: App.tsx  store.ts
frontend/src/components/: git-dialog.tsx  git-revision.tsx  git-revisions-panel.tsx  nodes.tsx  status-bar.tsx
frontend/src/types/: nodes.ts  state.ts
