[package]
name = "debug-flow"
version = "0.1.0"
edition = "2024"
default-run = "debug-flow"

[dependencies]
git2-ox = { path = "../git2-ox", features = ["utoipa"] }
clap = { version = "^4.5.49", features = ["derive"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
thiserror = "^2.0.17"
axum = { version = "^0.8.6", features = ["macros"] }
tokio = { version = "^1.47.1", features = ["full"] }
tower-http = { version = "^0.6.6", features = ["fs", "trace"] }
mime_guess = "^2.0"
rust-embed = { version = "^8.7", features = [
    "compression",
    "debug-embed",
    "include-exclude",
] }
log = "^0.4.28"
axum-reverse-proxy = "^1.0.2"
env_logger = "^0.11.8"
utoipa = { version = "^5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "^0.2.0" }
utoipa-rapidoc = { version = "^6.0.0", features = ["axum"] }
chrono = { version = "^0.4.42", features = ["serde"] }
hannibal = "^0.13"
axum-extra = { version = "0.10.3", features = ["query"] }
open = "5.3"
notify-debouncer-mini = "0.7.0"
notify = "8.2.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
    "sink",
] }
