[package]
name = "git2-ox"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust-like abstractions for the `git2` crate"

[dependencies]
log = "^0.4.28"
thiserror = "^2.0.17"
chrono = { version = "^0.4.42" }
git2 = "0.20.2"
utoipa = { version = "^5.3.1", features = ["chrono"], optional = true }
serde = { version = "^1.0.228", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
utoipa = ["dep:utoipa", "serde"]

[dev-dependencies]
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }
